kubernetes-maifest/rails-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rails
spec:
  type: LoadBalancer
  selector:
    app: rails
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: rails_docker_compose_psql-main-demo-web:latest
        imagePullPolicy: Never 
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: app-storage
          mountPath: /rails/storage

      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: app-storage
