kubernetes-maifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
  namespace: default
spec:
  rules:
  - host: rails.example.com
    http:
      paths:
      - path: /rails
        pathType: Prefix
        backend:
          service:
            name: rails
            port:
              number: 3000
